# rules-proto-self-edge-bug

./: BUILD.bazel  WORKSPACE
proto/: BUILD.bazel  foo.proto  test.proto
