load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "test_proto",
    srcs = [
        "foo.proto",
        "test.proto",
    ],
    visibility = ["//visibility:public"],
)

proto_cc_library(
    name = "test_cc_library",
    srcs = [
        "foo.pb.cc",
        "test.pb.cc",
    ],
    hdrs = [
        "foo.pb.h",
        "test.pb.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:test_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "test_cpp_compile",
    outputs = [
        "test.pb.cc",
        "test.pb.h",
        "foo.pb.cc",
        "foo.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "test_proto",
)

proto_compile(
    name = "test_go_compile",
    output_mappings = [
        "test.pb.go=test/test.pb.go",
        "foo.pb.go=test/foo.pb.go",
    ],
    outputs = [
        "test.pb.go",
        "foo.pb.go",
    ],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "test_proto",
)

proto_go_library(
    name = "test_go_proto",
    srcs = [
        "foo.pb.go",
        "test.pb.go",
    ],
    embed = ["//proto:test_go_proto"],
    importpath = "github.com/cedarai/tms/proto/test",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
